--- a/src/styles.css
+++ b/src/styles.css
@@ -28,25 +28,6 @@
     font-weight: bold;
 }
 
-/* black shade form 10-1 */
-.black-10 {
-    background: #f2f2f2;
-}
-.black-9 {
-    background: #e6e6e6;
-}
-.black-8 {
-    background: #d9d9d9;
-}
-.black-7 {
-    background: #cccccc;
-}
-.black-6 {
-    background: #bfbfbf;
-}
-.black-5 {
-    background: #b3b3b3;
-}
 
 /**
  * product image on card
@@ -114,4 +95,10 @@
     100% {
         background-position: 0% 50%;
     }
+}
+
+
+Card:hover{
+    transform: scale(1.05);
+ box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
 }
